# ASGE-Timeskip

./: CMakeLists.txt  README.md
app/ASGEGame/: ASGEGame.cpp  ASGEGame.hpp  Bullet.h  CMakeLists.txt  Entity.cpp  Entity.h  GameComponent.cpp  GameComponent.h  HitBox.cpp  HitBox.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Scene.cpp  Scene.h  SceneMainMenu.cpp  SceneMainMenu.h  SceneManager.cpp  SceneManager.h  Sprite.cpp  Sprite.h  TileRect.cpp  TileRect.h  Timer.cpp  Timer.h  bullet.cpp  bullet.h  main.cpp
app/ASGEGame/Components/: ControlSchemes.cpp  ControlSchemes.h  GameComponent.cpp  GameComponent.h  Helper.cpp  Helper.h  TimeTravel.cpp  TimeTravel.h  Timer.cpp  Timer.h  Vector2.cpp  Vector2.h
app/ASGEGame/Managers/: SceneManager.cpp  SceneManager.h
app/ASGEGame/Scenes/: ASGEGame.cpp  ASGEGame.hpp  GameScenes.h  LevelSelect.cpp  LevelSelect.h  Scene.cpp  Scene.h  SceneLevel1.cpp  SceneLevel1.h  SceneLevel2.cpp  SceneLevel2.h  SceneLevel3.cpp  SceneLevel3.h  SceneMainMenu.cpp  SceneMainMenu.h  WinScene.cpp  WinScene.h
app/ASGEGame/Sprites/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  EnemyChaser.cpp  EnemyChaser.h  EnemyPassive.cpp  EnemyPassive.h  Entity.cpp  Entity.h  HealthPowerUp.cpp  HealthPowerUp.h  Player.cpp  Player.h  PlayerUI.cpp  PlayerUI.h  Sprite.cpp  Sprite.h
app/ASGEGame/data/: PastMap2 (1).tmx  PastMap2.tmx  PastMap2.tsx  testmapforraycast.tmx
app/ASGEGame/data/map/: Level2PastMap.tmx  Level2PastMap.tsx  Level2PresentMap.tmx  Level2PresentMap.tsx  Level3PastMap.tmx  Level3PastMap.tsx  Level3PresentMap.tmx  Level3PresentMap.tsx  PastMap2.tmx  PastMap2.tsx  PresentMap.tmx  PresentMap2.tmx  PresentMap2.tsx  Tileset.tsx
app/ASGEGame/temp-joey-UI/: PlayerUI.cpp  PlayerUI.h
